--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "m13-ecommerce-back-end",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "watch": "nodemon server.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.25.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+    "name": "m13-ecommerce-back-end",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "watch": "nodemon server.js",
+        "seed": "node seeds/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:LuckySal/M13-ecommerce-back-end.git"
+    },
+    "keywords": [],
+    "author": "Brandon Hill",
+    "license": "MIT",
+    "devDependencies": {
+        "nodemon": "^2.0.3"
+    },
+    "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mysql2": "^2.1.0",
+        "sequelize": "^5.21.7"
+    }
 }
